--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
-.hero,
-#gallery {
+#home,
+#card-gallery {
   background-color: #e2edff;
 }
 
 section {
   padding-top: 5rem;
+}
+
+.gallery-img {
+  width: 100%;
+}
+
+#gallery .row > * {
+  padding: 0;
 }
